[package]
name = "saikyo-curl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.50"
vcpkg = "0.2.15"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["zlib", "nghttp2"] }
